moved files out of portfolio to main body

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/wa20/React-Portfolio",
+  "homepage": ".",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
